--- a/cell01/ex03/piscineweb.html
+++ b/cell01/ex03/piscineweb.html
@@ -13,11 +13,12 @@
 
 <body>
   <h1>Piscine Web</h1>
-  <img src="https://tse2.mm.bing.net/th/id/OIP.cqlmSi15LKX4OJof7v88bgHaJ4?rs=1&pid=ImgDetMain&o=7&rm=3"
-    src="https://www.youtube.com/watch?v=INscMGmhmX4" alt="alternatetext">
+  <a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+    <img src="https://tse2.mm.bing.net/th/id/OIP.cqlmSi15LKX4OJof7v88bgHaJ4?rs=1&pid=ImgDetMain&o=7&rm=3"
+      alt="alternatetext">
+  </a>
   <img src="https://3.bp.blogspot.com/-THYAMNcnGl4/UnUlgI0OYWI/AAAAAAAABQQ/-Nm-12QPDLo/s1600/Cat.jpg"
     alt="alternatetext">
-
 </body>
 
 </html>
