--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -12,18 +12,13 @@
         <div class="menu-label">SNCF Ham &amp; Cheese Sandwich</div>
         <div class="dropdown">
             <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle">Voir les ingrédients</label>
+            <label for="menu-toggle">ingrédients</label>
             <div class="dropdown-content">
                 <ul class="ingredients-list">
-                    <li class="ingredient-ok">Pain baguette dorée</li>
-                    <li class="ingredient-ok">Jambon supérieur</li>
-                    <li class="ingredient-ok">Emmental râpé</li>
-                    <li class="ingredient-ok">Beurre doux</li>
-                    <li class="ingredient-ok">Feuille de salade</li>
                     <li class="ingredient-ok">CSS</li>
                     <li class="ingredient-ok">HTML</li>
                     <li class="ingredient-no">Javascript</li>
-                    <li class="ingredient-no">Autre ingrédient</li>
+                    <li class="ingredient-no">Other Ingredient</li>
                 </ul>
             </div>
         </div>
