--- a/cell04/ex00/cv2.html
+++ b/cell04/ex00/cv2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>asd
+<body>
     <!-- Navbar -->
     <nav class="navbar">
         <a href="#about">About</a>
