modified:   cell04/ex00/cv1.html 	modified:   cell04/ex00/cv2.html

--- a/cell04/ex00/cv1.html
+++ b/cell04/ex00/cv1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV 1 - Jane Smith</title>
+    <title>CV 1 - Sireelapas Lerthirancharoen</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,26 +20,30 @@
     <!-- About -->
     <section id="about" class="section card">
         <img src="https://via.placeholder.com/150" alt="Profile Photo" class="profile-pic">
-        <h1>Jane Smith</h1>
-        <h3>Software Engineer</h3>
+        <h1>Sireelapas Lerthirancharoen</h1>
+        <h3>Student From King Mongkut's Instutution of Technology Ladkrabang 
+            Business Economy</h3>
     </section>
 
     <!-- Experience -->
     <section id="experience" class="section card">
         <h2>Experience & Skills</h2>
         <ul>
-            <li>Software Engineer at TechWorld</li>
-            <li>Intern at DevSolutions</li>
-            <li>C, C++, Java, React, Node.js</li>
+            <li>Teamwork : Strong ability to collaborate effectively in groups.</li>
+            <li>Computer Literacy : Proficient in Microsoft Word,PowerPoint,and basic Excel.</li>
+            <li>Problem-Solving : Able to find practical solutions in challenging situations.</li>
         </ul>
     </section>
 
     <!-- Contact -->
     <section id="contact" class="section card">
         <h2>Contact</h2>
-        <p>📧 janesmith@example.com</p>
-        <p>🔗 linkedin.com/in/janesmith</p>
-        <p>💻 github.com/janesmith</p>
+        <a href="https://www.instagram.com/siiiryz_">Instagram/siiiryz_</a>
+
+        <a href="https://www.facebook.com/sireelapas.lerthirancharoen">Facebook/Sireelapas</a>
+        
+    <a href="https://mail.google.com/mail/u/4/?pli=1#inbox">Email/68100497</a>
+
     </section>
 </body>
 
