--- a/cell04/ex00/cv2.html
+++ b/cell04/ex00/cv2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV 2 - Name Lastname</title> <!-- Name lastname-->>
+    <title>CV 2 - Peeraphat</title> <!-- Name lastname-->>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,7 +21,8 @@
     <section id="about" class="section card">
         <img src="https://via.placeholder.com/150" alt="Profile Photo" class="profile-pic">
         <h1>Name Lastname</h1>
-        <h3>Student From King Mongkut's Instutution of Technology Ladkrabang</h3>
+        <h3>Student From King Mongkut's Instutution of Technology Ladkrabang 
+            Business Economy</h3>
     </section>
 
     <!-- Experience -->
