modified:   cell04/ex00/cv2.html

--- a/cell04/ex00/cv2.html
+++ b/cell04/ex00/cv2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV 2 - Peeraphat</title> <!-- Name lastname-->>
+    <title>CV 2 -Peeraphat  Panyatip</title> <!-- Name lastname-->>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,7 +20,7 @@
     <!-- About -->
     <section id="about" class="section card">
         <img src="https://via.placeholder.com/150" alt="Profile Photo" class="profile-pic">
-        <h1>Name Lastname</h1>
+        <h1>Peeraphat  Panyatip</h1>
         <h3>Student From King Mongkut's Instutution of Technology Ladkrabang 
             Business Economy</h3>
     </section>
@@ -29,18 +29,21 @@
     <section id="experience" class="section card">
         <h2>Experience & Skills</h2>
         <ul>
-            <li>Software Engineer at TechWorld</li>
-            <li>Intern at DevSolutions</li>
-            <li>C, C++, Java, React, Node.js</li>
+            <li>Strong communication and interpersonal skills.</li>
+            <li>Communicated effectively with diverse groups to ensure smooth workflow.</li>
+            <li>Time management and organizational abilities.</li>
         </ul>
     </section>
 
     <!-- Contact -->
     <section id="contact" class="section card">
         <h2>Contact</h2>
-        <p>📧 name@example.com</p>
-        <p>🔗 linkedin.com/in/name</p>
-        <p>💻 github.com/680xxxxx</p>
+         <a href="https://www.instagram.com/p.praphat_?igsh=Y3U3dTU2eDIyb3Jh&utm_source=qr">Instagram/p.praphat</a>
+
+        <a href="https://m.facebook.com/peerapat.panyatip/?">Facebook/Peeraphat</a>
+        
+    <a href="https://mail.google.com/mail/u/0/#inbox">Email/Peeraphat</a>
+
     </section>
 </body>
 
