--- a/cell04/rush/cv1.html
+++ b/cell04/rush/cv1.html
@@ -19,7 +19,7 @@
 
     <!-- About -->
     <section id="about" class="section card">
-        <img src="https://via.placeholder.com/150" alt="Profile Photo" class="profile-pic">
+        <img src="TheOne.jpg" alt="Profile Photo" class="profile-pic">
         <h1>Sireelapas Lerthirancharoen</h1>
         <h3>Student From King Mongkut's Instutution of Technology Ladkrabang 
             Business Economy</h3>
