--- a/cell04/rush/index.html
+++ b/cell04/rush/index.html
@@ -5,7 +5,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Showcase</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Base styles */
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .home {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f7f7f7;
+        }
+
+        .home-container {
+            text-align: center;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 90%; /* Width is dynamic */
+            max-width: 500px; /* Max width for large screens */
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        .home-links {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .cv-link {
+            text-decoration: none;
+            padding: 10px 20px;
+            font-size: 1.1rem;
+            color: #fff;
+            background-color: #007BFF;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .cv-link:hover {
+            background-color: #0056b3;
+        }
+
+        /* Responsive styles */
+        @media (min-width: 768px) {
+            .home-container {
+                width: 70%; /* Adjust width for medium screens (tablet) */
+            }
+
+            .cv-link {
+                font-size: 1.2rem;
+                padding: 12px 25px;
+            }
+        }
+
+        @media (min-width: 1024px) {
+            .home-container {
+                width: 50%; /* Adjust width for large screens (desktop) */
+            }
+
+            h1 {
+                font-size: 3rem;
+            }
+
+            p {
+                font-size: 1.5rem;
+            }
+        }
+    </style>
 </head>
 
 <body class="home">
